Fixed a bug on monster-switch, on firefox

--- a/apps/core/style/app.css
+++ b/apps/core/style/app.css
@@ -1658,6 +1658,7 @@ label.monster-invalid {
 .monster-switch > input {
 	position: absolute;
 	width: 0;
+	opacity: 0;
 }
 .monster-switch > span {
 	display: block;
